--- a/.github/workflows/watsonx-code-review.yml
+++ b/.github/workflows/watsonx-code-review.yml
@@ -47,7 +47,8 @@ jobs:
       - name: Post WatsonX Review Comment
         uses: peter-evans/create-or-update-comment@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: WatsonXabhi/IWillSellItOutsideToo
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             WatsonX Code Review Results:
