--- a/.github/workflows/watsonx-code-review.yml
+++ b/.github/workflows/watsonx-code-review.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "main" ]
   issue_comment:
     types: [created]
-
   workflow_dispatch:
 
 jobs:
@@ -17,16 +16,21 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Send PR Diff to WatsonX
+        id: watsonx
         env:
           WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
         run: |
-          DIFF=$(git diff HEAD)
-          curl -X POST \
+          DIFF=$(git diff origin/main...HEAD)
+          RESPONSE=$(curl -s -X POST \
             -H "Authorization: Bearer $WATSONX_API_KEY" \
             -H "Content-Type: application/json" \
             -d "{\"diff\": \"$DIFF\", \"language\": \"apex\"}" \
-            "$WATSONX_URL/v1/code-review" > review.json
+            "$WATSONX_URL/v1/code-review")
+          echo "$RESPONSE" > review.json
+          echo "review_output<<EOF" >> $GITHUB_OUTPUT
+          echo "$RESPONSE" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Post WatsonX Review Comment
         uses: peter-evans/create-or-update-comment@v4
@@ -34,7 +38,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: WatsonXabhi/IWillSellItOutsideToo
           body: |
-            WatsonX Code Review Results:
+            💡 **WatsonX Code Review Results**:
             ```json
-            $(cat review.json)
+            ${{ steps.watsonx.outputs.review_output }}
             ```
