--- a/.github/workflows/watsonx-code-review.yml
+++ b/.github/workflows/watsonx-code-review.yml
@@ -9,11 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
+      # Step 2: Get IBM Cloud IAM Token
       - name: Get IBM Cloud IAM Token
         env:
           IBM_CLOUD_API_KEY: ${{ secrets.WATSONX_API_KEY }}
@@ -25,40 +27,44 @@ jobs:
           ACCESS_TOKEN=$(echo $TOKEN_RESPONSE | jq -r '.access_token')
           echo "access_token=$ACCESS_TOKEN" >> $GITHUB_ENV
 
+      # Step 3: Send PR Diff to WatsonX
       - name: Send PR Diff to WatsonX
         env:
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
-          PROJECT_ID: ${{ secrets.WATSONX_PROJECT_ID }}  # WatsonX project/deployment space ID
+          PROJECT_ID: ${{ secrets.WATSONX_PROJECT_ID }}
         run: |
-          # Diff of the PR branch against base
+          # Diff of PR branch vs base branch
           DIFF=$(git diff origin/${{ github.event.pull_request.base.ref }}...HEAD)
 
-          # Construct JSON payload with project_id
+          # Construct JSON payload with project_id and model
           JSON_PAYLOAD=$(jq -n \
             --arg diff "$DIFF" \
             --arg lang "apex" \
             --arg project_id "$PROJECT_ID" \
-            '{diff: $diff, language: $lang, project_id: $project_id}')
+            --arg model "ibm/granite-3-3-8b-instruct" \
+            '{diff: $diff, language: $lang, project_id: $project_id, model: $model}')
 
-          # Call WatsonX API
+          # Call WatsonX code review API
           curl -s -X POST \
             -H "Authorization: Bearer $access_token" \
             -H "Content-Type: application/json" \
             -d "$JSON_PAYLOAD" \
             "$WATSONX_URL/v1/code-review" > review.json
 
+      # Step 4: Read WatsonX review output
       - name: Read WatsonX Review Output
         id: read_review
         run: |
-          CONTENT=$(jq -c . review.json)  # compact JSON for GitHub Actions output
+          CONTENT=$(jq -c . review.json)  # compact JSON for GitHub Actions
           echo "review=$CONTENT" >> $GITHUB_OUTPUT
 
+      # Step 5: Post review as a PR comment
       - name: Post WatsonX Review Comment
         uses: peter-evans/create-or-update-comment@v4
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            💡 WatsonX Code Review Results:
+            💡 **WatsonX Code Review Results:**
             ```
             ${{ steps.read_review.outputs.review }}
             ```
