--- a/.github/workflows/watsonx-code-review.yml
+++ b/.github/workflows/watsonx-code-review.yml
@@ -27,7 +27,7 @@ jobs:
           ACCESS_TOKEN=$(echo $TOKEN_RESPONSE | jq -r '.access_token')
           echo "access_token=$ACCESS_TOKEN" >> $GITHUB_ENV
 
-      # Step 3: Send PR Diff to WatsonX
+      # Step 3: Send PR Diff to WatsonX Chat API
       - name: Send PR Diff to WatsonX
         env:
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
@@ -36,20 +36,28 @@ jobs:
           # Diff of PR branch vs base branch
           DIFF=$(git diff origin/${{ github.event.pull_request.base.ref }}...HEAD)
 
-          # Construct JSON payload with project_id and model
+          # Construct JSON payload for WatsonX Text/Chat API
           JSON_PAYLOAD=$(jq -n \
-            --arg diff "$DIFF" \
-            --arg lang "apex" \
-            --arg project_id "$PROJECT_ID" \
             --arg model "ibm/granite-3-3-8b-instruct" \
-            '{diff: $diff, language: $lang, project_id: $project_id, model: $model}')
+            --arg project_id "$PROJECT_ID" \
+            --arg diff "$DIFF" \
+            '{
+              model: $model,
+              project_id: $project_id,
+              messages: [
+                {
+                  role: "user",
+                  content: ("Please review the following Apex/LWC code for best practices and return JSON:\n\n" + $diff)
+                }
+              ]
+            }')
 
-          # Call WatsonX code review API
+          # Call WatsonX Text/Chat API
           curl -s -X POST \
             -H "Authorization: Bearer $access_token" \
             -H "Content-Type: application/json" \
             -d "$JSON_PAYLOAD" \
-            "$WATSONX_URL/v1/code-review" > review.json
+            "$WATSONX_URL/v1/text/chat" > review.json
 
       # Step 4: Read WatsonX review output
       - name: Read WatsonX Review Output
